--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Open Polaris 🎉</title>
   </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
