Let's go polar bear 🐻‍❄️

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@450;550;650;700&display=swap"
       rel="stylesheet"
     />
-    <title>Open Polaris 🎉</title>
+    <title>Open Polaris 🐻‍❄️</title>
   </head>
   <body>
     <main id="app"></main>
