Fix accessibility reported by axe tool 💞

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Open Polaris 🐻‍❄️</title>
   </head>
   <body>
-    <main id="app"></main>
+    <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
