--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://cdn.shopify.com/" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@450;550;650;700&display=swap"
       rel="stylesheet"
+      href="https://cdn.shopify.com/static/fonts/inter/v4/styles.css"
     />
     <title>Open Polaris 🐻‍❄️</title>
   </head>
